--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -27,7 +27,9 @@ body {
   color: theme("colors.dark");
 }
 
-.mainBG {
-  background-position: center;
-  background-position-y: -5rem ;
-}
+// .mainBG {
+//   background-position: center;
+//   background-position-y: -5rem ;
+//   background-repeat: no-repeat;
+  
+// }
