--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -59,3 +59,12 @@ body {
     display: flex !important;
   }
 }
+
+@media (max-height: 650px) {
+  .navListItemResponsive {
+    margin-top: 2.5rem;
+  }
+  .backgroundColor {
+    margin-top: -116vh;
+  }
+}
