--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -60,11 +60,11 @@ body {
   }
 }
 
-@media (max-height: 650px) {
-  .navListItemResponsive {
-    margin-top: 2.5rem;
-  }
-  .backgroundColor {
-    margin-top: -116vh;
-  }
-}
+// @media screen and (max-height: 650px) {
+//   .navListItemResponsive {
+//     margin-top: 2.5rem;
+//   }
+//   .backgroundColor {
+//     margin-top: -116vh;
+//   }
+// }
