--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -17,7 +17,6 @@ body {
 .navbar-links {
   box-shadow: inset 0 0 0 0 theme("colors.light");
   color: theme("colors.light");
-  // margin: 0 -.25rem;
   padding: 0 .25rem;
   transition: color .4s ease-in-out, box-shadow .4s ease-in-out;
 }
@@ -60,10 +59,12 @@ body {
   }
 }
 
-@media screen and (max-height: 650px) {
+@media (max-height: 650px) {
   .navListItemResponsive {
     margin-top: 2.5rem;
   }
+}
+@media (max-height: 650px) {
   .backgroundColor {
     margin-top: -116vh;
   }
